--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -7,11 +8,8 @@
   <body>
     <nav id="topmenu">
       <ul>
-        <li class="menu">역사</li>
-        <li class="menu">구성원</li>
-        <li class="menu"></li>
-        <li class="menu"></li>
-        <li class="menu"></li>
+        <li> <a href="#" class="menu" id="history">역사</a></li>
+        <li> <a href="#" class="menu">구성원</a></li>
       </ul>
     </nav>
   </body>
