--- a/index.html
+++ b/index.html
@@ -2,16 +2,60 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>피오남 </title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
   </head>
   <body>
-    <nav id="topmenu">
-      <ul>
-        <li> <a href="#" class="menu" id="history">역사</a></li>
-        <li> <a href="#" class="menu">구성원</a></li>
-      </ul>
-    </nav>
+    <header>
+      <div id="header-inner">
+        <a href="index.html" id="logo"></a>
+        <nav>
+          <a href="#" id="menu-icon"></a>
+          <ul>
+            <li> <a href="index.html" class="current">Home</a></li>
+            <li> <a href="#" class="menu">Skill</a></li>
+            <li> <a href="#" class="menu">Portfolio</a></li>
+            <li> <a href="#" class="menu">Out team</a></li>
+            <li> <a href="#" class="menu">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- End Header -->
+    <section class="banner">
+      <div class="banner-inner">
+        <img src="img/fionam.jpg">
+      </div>
+    </section>
+    <!-- End Banner -->
+    <section class="one-fourth" id="html">
+      <td><i class="fa fa-html5"></i></td>
+      <h3>HTML</h3>
+    </section>
+    <section class="one-fourth" id="css">
+      <td><i class="fa fa-css3"></i></td>
+      <h3>CSS</h3>
+    </section>
+    <section class="one-fourth" id="css">
+      <td><i class="fa fa-home"></i></td>
+      <h3>HOME</h3>
+    </section>
+    <section class="one-fourth" id="css">
+      <td><i class="fa fa-users"></i></td>
+      <h3>USER</h3>
+    </section>
+    <!-- End Four Column -->
+    <section class="inner-wrapper">
+      <article id="taewan">
+        <img src="img/taewan.jpg">
+      </article>
+      <aside id="taewan">
+        <h3>강쇠</h3>
+        <p>별명: 강쇠<p>
+      </aside>
+    </section>
   </body>
 </html>
 
